--- a/docs/spec/components/schemas/EventClaimingStateKey.yaml
+++ b/docs/spec/components/schemas/EventClaimingStateKey.yaml
@@ -10,4 +10,4 @@ properties:
     pattern: '^0x[0-9a-fA-F]{64}$'
   type:
     type: string
-    enum: [ passport_event_state ]
+    enum: [ event_claiming_state ]
