--- a/docs/spec/paths/integrations@geo-points-svc@v1@public@events@{id}@qrcode.yaml
+++ b/docs/spec/paths/integrations@geo-points-svc@v1@public@events@{id}@qrcode.yaml
@@ -1,11 +1,16 @@
-post:
+patch:
   tags:
-    - Points balance
-  summary: Join rewards program
-  description: Join rewards program
-  operationId: joinRewardsProgram
+    - Events
+  summary: Fulfill QR code event
+  description: Fulfill QR code event
+  operationId: fulfillQREvent
   parameters:
-    - $ref: '#/components/parameters/pathNullifier'
+    - in: path
+      name: 'id'
+      required: true
+      schema:
+        type: string
+        example: "059c81dd-2a54-44a8-8142-c15ad8f88949"
     - in: header
       name: Signature
       description: Signature of the request
@@ -23,7 +28,7 @@ post:
             - data
           properties:
             data:
-              $ref: '#/components/schemas/VerifyPassport'
+              $ref: '#/components/schemas/ClaimEventKey'
   responses:
     200:
       description: Success
@@ -40,17 +45,13 @@ post:
       $ref: '#/components/responses/invalidParameter'
     401:
       $ref: '#/components/responses/invalidAuth'
+    403:
+      description: This event type was disabled and cannot be fulfilled
+      content:
+        application/vnd.api+json:
+          schema:
+            $ref: '#/components/schemas/Errors'
     404:
-      description: Balance not exists.
-      content:
-        application/vnd.api+json:
-          schema:
-            $ref: '#/components/schemas/Errors'
-    429:
-      description: Passport already verified or event absent for user.
-      content:
-        application/vnd.api+json:
-          schema:
-            $ref: '#/components/schemas/Errors'
+      $ref: '#/components/responses/notFound'
     500:
       $ref: '#/components/responses/internalError'
