--- a/docs/spec/components/schemas/CreateBalanceKey.yaml
+++ b/docs/spec/components/schemas/CreateBalanceKey.yaml
@@ -10,4 +10,4 @@ properties:
     pattern: '^0x[0-9a-fA-F]{64}$'
   type:
     type: string
-    enum: [ create_balance, update_balance ]
+    enum: [ create_balance ]
