--- a/docs/spec/paths/integrations@geo-points-svc@v1@public@event_types@{name}.yaml
+++ b/docs/spec/paths/integrations@geo-points-svc@v1@public@event_types@{name}.yaml
@@ -30,6 +30,9 @@ patch:
   description: |
     Update an existing event type. Requires **admin** role in JWT.
     **All attributes** are updated, ensure to pass every existing field too.
+    Although this is not JSON:API compliant, it is much easier to work with
+    in Go, because differentiating between `{}` and `{"field": null}`
+    requires custom unmarshalling implementation.
   operationId: updateEventType
   requestBody:
     required: true
