--- a/docs/spec/paths/integrations@geo-points-svc@v1@public@event_types.yaml
+++ b/docs/spec/paths/integrations@geo-points-svc@v1@public@event_types.yaml
@@ -83,5 +83,11 @@ post:
       $ref: '#/components/responses/invalidParameter'
     401:
       $ref: '#/components/responses/invalidAuth'
+    409:
+      description: Event type already exists
+      content:
+        application/vnd.api+json:
+          schema:
+            $ref: '#/components/schemas/Errors'
     500:
       $ref: '#/components/responses/internalError'
