--- a/docs/spec/components/schemas/Balance.yaml
+++ b/docs/spec/components/schemas/Balance.yaml
@@ -42,6 +42,11 @@ allOf:
             description: Referral codes. Returned only for the single user.
             items:
               $ref: '#/components/schemas/ReferralCode'
+          referred_users_count:
+            type: integer
+            format: int
+            description: Number of invited users
+            example: 13
           level:
             type: integer
             format: int
