Fix pub signal access, add header in docs

--- a/docs/spec/paths/integrations@geo-points-svc@v1@public@event_types.yaml
+++ b/docs/spec/paths/integrations@geo-points-svc@v1@public@event_types.yaml
@@ -8,6 +8,7 @@ get:
     for each event type in the system.
   operationId: getEventTypes
   parameters:
+    - $ref: '#/components/parameters/headerLang'
     - in: query
       name: 'filter[name]'
       description: Filter by type name. Possible values should be hard-coded in the client.
