--- a/docs/spec/paths/integrations@geo-points-svc@v1@public@events.yaml
+++ b/docs/spec/paths/integrations@geo-points-svc@v1@public@events.yaml
@@ -6,6 +6,7 @@ get:
   operationId: getEvents
   parameters:
     - $ref: '#/components/parameters/filterNullifier'
+    - $ref: '#/components/parameters/headerLang'
     - in: query
       name: 'filter[status]'
       description: |
