--- a/docs/spec/paths/integrations@geo-points-svc@v1@public@event_types@{name}.yaml
+++ b/docs/spec/paths/integrations@geo-points-svc@v1@public@event_types@{name}.yaml
@@ -4,6 +4,14 @@ get:
   summary: Get event type
   description: Returns public configuration of event type by its unique name
   operationId: getEventType
+  parameters:
+    - $ref: '#/components/parameters/headerLang'
+    - in: path
+      name: 'name'
+      required: true
+      schema:
+        type: string
+        example: "meetup_participation"
   responses:
     200:
       description: Success
@@ -34,6 +42,14 @@ patch:
     in Go, because differentiating between `{}` and `{"field": null}`
     requires custom unmarshalling implementation.
   operationId: updateEventType
+  parameters:
+    - $ref: '#/components/parameters/headerLang'
+    - in: path
+      name: 'name'
+      required: true
+      schema:
+        type: string
+        example: "meetup_participation"
   requestBody:
     required: true
     content:
