Rename request type

--- a/docs/spec/paths/integrations@geo-points-svc@v1@public@event_types@{name}.yaml
+++ b/docs/spec/paths/integrations@geo-points-svc@v1@public@event_types@{name}.yaml
@@ -31,7 +31,7 @@ get:
     500:
       $ref: '#/components/responses/internalError'
 
-patch:
+put:
   tags:
     - Event types
   summary: Update event type
