--- a/docs/spec/components/schemas/ActivateBalanceKey.yaml
+++ b/docs/spec/components/schemas/ActivateBalanceKey.yaml
@@ -10,4 +10,4 @@ properties:
     pattern: '^0x[0-9a-fA-F]{64}$'
   type:
     type: string
-    enum: [ activate_balance ]
+    enum: [ activate_balance, create_balance ]
