--- a/docs/spec/components/schemas/ActivateBalance.yaml
+++ b/docs/spec/components/schemas/ActivateBalance.yaml
@@ -12,5 +12,5 @@ allOf:
         properties:
           referred_by:
             type: string
-            description: referrer code from the link
+            description: Referral code from the link
             example: "rCx18MZ4"
