--- a/docs/spec/paths/integrations@geo-points-svc@v1@public@balances.yaml
+++ b/docs/spec/paths/integrations@geo-points-svc@v1@public@balances.yaml
@@ -3,10 +3,10 @@ post:
     - Points balance
   summary: Create points balance
   description: |
-    Create an empty balance inactive for authorized user who makes the request.
+    Create an empty balance for authorized user who makes the request.
         
     If balance already exists, but it is disabled (it was not referred by another user,
-    but has fulfilled some event), you should use PATCH balances/ endpoint as well.
+    but has fulfilled some event), you should activate balance instead.
   operationId: createPointsBalance
   requestBody:
     content:
@@ -17,10 +17,19 @@ post:
             - data
           properties:
             data:
-              $ref: '#/components/schemas/ActivateBalance'
+              $ref: '#/components/schemas/CreateBalance'
   responses:
-    204:
+    201:
       description: Created
+      content:
+        application/vnd.api+json:
+          schema:
+            type: object
+            required:
+              - data
+            properties:
+              data:
+                $ref: '#/components/schemas/Balance'
     400:
       $ref: '#/components/responses/invalidParameter'
     401:
