--- a/docs/spec/paths/integrations@geo-points-svc@v1@public@balances@{nullifier}@verifypassport.yaml
+++ b/docs/spec/paths/integrations@geo-points-svc@v1@public@balances@{nullifier}@verifypassport.yaml
@@ -3,8 +3,14 @@ post:
     - Points balance
   summary: Verify passport
   description: |
-    Verify passport with ZKP, fulfilling the event.
+    Verify passport to unlock event claiming and get reward.
     One passport can't be verified twice.
+    
+    There are two verification flows:
+    1) Legacy flow is done through Query ZK-proof
+    2) New flow is done via JWT, received from Auth service after providing ZK-proof
+    
+    Some events will be automatically claimed in case if balance is active.
   operationId: verifyPassport
   parameters:
     - $ref: '#/components/parameters/pathNullifier'
@@ -42,14 +48,20 @@ post:
       $ref: '#/components/responses/invalidParameter'
     401:
       $ref: '#/components/responses/invalidAuth'
+    403:
+      description: Invalid signature
+      content:
+        application/vnd.api+json:
+          schema:
+            $ref: '#/components/schemas/Errors'
     404:
-      description: Balance not exists.
+      description: Balance not exists
       content:
         application/vnd.api+json:
           schema:
             $ref: '#/components/schemas/Errors'
     409:
-      description: Passport already verified or event absent for user.
+      description: Passport already verified or anonymous ID exists
       content:
         application/vnd.api+json:
           schema:
