Add poll event fulfillment logic

--- a/config.yaml
+++ b/config.yaml
@@ -78,13 +78,16 @@ auth:
   addr: http://rarime-auth
 
 verifier:
-  verification_key_path: "./verification_key.json"
   allowed_age: 18
   allowed_identity_timestamp: 1715698750
 
-root_verifier:
+poseidonsmt_root_verifier:
   rpc: evm_rpc_url
-  contract: registration_contract_address
+  contract: poseidon_smt_contract_address
+  request_timeout: 10s
+
+proposalsmt_root_verifier:
+  rpc: evm_rpc_url
   request_timeout: 10s
 
 sig_verifier:
