--- a/docs/spec/paths/integrations@geo-points-svc@v1@public@balances.yaml
+++ b/docs/spec/paths/integrations@geo-points-svc@v1@public@balances.yaml
@@ -53,6 +53,13 @@ get:
     - $ref: '#/components/parameters/pageLimit'
     - $ref: '#/components/parameters/pageNumber'
     - $ref: '#/components/parameters/pageOrder'
+    - in: query
+      name: count
+      description: Count total number of users.
+      required: false
+      schema:
+        type: boolean
+        example: true
   responses:
     200:
       description: Success
