Add worker `leveljustice` which can change level according to current balance. Downgradeable parameter specify if worker can do LvlDown

--- a/config.yaml
+++ b/config.yaml
@@ -66,6 +66,7 @@ event_types:
       qr_code_value: "qr_code_base64_string"
 
 levels:
+  downgradeable: false
   levels:
     - lvl: 1
       threshold: 0
