Fix if checks. Code refactoring

--- a/docs/spec/paths/integrations@geo-points-svc@v1@public@balances@{nullifier}@verify@external.yaml
+++ b/docs/spec/paths/integrations@geo-points-svc@v1@public@balances@{nullifier}@verify@external.yaml
@@ -19,6 +19,8 @@ post:
       schema:
         type: string
         pattern: '^[a-f0-9]{64}$'
+  security:
+    - BearerAuth: []
   requestBody:
     required: true
     content:
