--- a/docs/spec/paths/integrations@geo-points-svc@v1@public@events@poll.yaml
+++ b/docs/spec/paths/integrations@geo-points-svc@v1@public@events@poll.yaml
@@ -1,16 +1,11 @@
-patch:
+post:
   tags:
     - Events
   summary: Fulfill poll event
   description: Fulfill event for voting in Georgian poll by sending proof of voting
   operationId: fulfillPollEvent
-  parameters:
-    - in: path
-      name: 'id'
-      required: true
-      schema:
-        type: string
-        example: "059c81dd-2a54-44a8-8142-c15ad8f88949"
+  security:
+    - BearerAuth: []
   requestBody:
     required: true
     content:
