Small doc changes

--- a/docs/spec/components/schemas/FulfillPollEvent.yaml
+++ b/docs/spec/components/schemas/FulfillPollEvent.yaml
@@ -13,6 +13,4 @@ allOf:
           proof:
             type: object
             format: types.ZKProof
-            description: |
-              Proof of voting in some poll.
-              The poll ID must be equal to `meta.static.poll_id` from the event.
+            description: Proof of voting in some poll.
