--- a/docs/spec/components/schemas/DailyQuestionResult.yaml
+++ b/docs/spec/components/schemas/DailyQuestionResult.yaml
@@ -1,21 +1,21 @@
 allOf:
-  - $ref: "#/components/schemas/DailyQuestionsKey"
+  - $ref: '#/components/schemas/DailyQuestionKey'
   - type: object
+    x-go-is-request: true
     required:
       - attributes
     properties:
       attributes:
         type: object
         required:
-          - already_done_for_user
           - time_to_next
+          - answer_status
         properties:
-          already_done_for_user:
-            type: boolean
-            description: question of the day already done for user
-            example: true
           time_to_next:
             type: integer
             format: int64
             description: time to next question of the day
             example: 312334324
+          answer_status:
+            type: boolean
+            description: Right or wrong answers
