--- a/docs/spec/components/schemas/DailyQuestionUserAnswerKey.yaml
+++ b/docs/spec/components/schemas/DailyQuestionUserAnswerKey.yaml
@@ -8,4 +8,4 @@ properties:
     description: id question
   type:
     type: string
-    enum: [daily_question_request ]
+    enum: [daily_question_user_answer ]
