--- a/docs/spec/components/schemas/DailyQuestionEdit.yaml
+++ b/docs/spec/components/schemas/DailyQuestionEdit.yaml
@@ -20,8 +20,8 @@ allOf:
             example: Georgian capital
           reward:
             type: integer
-            format: int
-            description: reward for a correct answer
+            format: int64
+            description: Reward for a correct answer
           options:
             type: array
             description: Answer options. Minimum 2, maximum 6
@@ -44,13 +44,12 @@ allOf:
           correct_answer:
             type: integer
             format: int64
-            description: right answer index
+            description: Correct answer ID
           time_for_answer:
             type: integer
             format: int64
-            description: time for answer
+            description: Time for answer
           starts_at:
-            type: integer
-            format: time.Time
-            description: start date when this question is available, hours and minutes are always 0
+            type: string
+            description: Start date when this question is available, hours and minutes are always 0
             example: "2024-08-23"
