update docs add requests fo dq admin

--- a/docs/spec/paths/integrations@geo-points-svc@v1@public@daily_questions.yaml
+++ b/docs/spec/paths/integrations@geo-points-svc@v1@public@daily_questions.yaml
@@ -7,6 +7,16 @@ post:
   operationId: createDailyQuestion
   security:
     - BearerAuth: []
+  requestBody:
+    content:
+      application/vnd.api+json:
+        schema:
+          type: object
+          required:
+            - data
+          properties:
+            data:
+              $ref: '#/components/schemas/DailyQuestionEdit'
   responses:
     200:
       description: Success
