--- a/docs/spec/paths/integrations@geo-points-svc@v1@public@daily_questions@{question_id}.yaml
+++ b/docs/spec/paths/integrations@geo-points-svc@v1@public@daily_questions@{question_id}.yaml
@@ -39,6 +39,16 @@ patch:
   operationId: editDailyQuestion
   security:
     - BearerAuth: []
+  requestBody:
+    content:
+      application/vnd.api+json:
+        schema:
+          type: object
+          required:
+            - data
+          properties:
+            data:
+              $ref: '#/components/schemas/DailyQuestionEdit'
   responses:
     200:
       description: Success
