--- a/docs/spec/paths/integrations@geo-points-svc@v1@public@daily_questions@{question_id}.yaml
+++ b/docs/spec/paths/integrations@geo-points-svc@v1@public@daily_questions@{question_id}.yaml
@@ -19,6 +19,8 @@ delete:
             properties:
               data:
                 $ref: '#/components/schemas/DailyQuestionDetails'
+    204:
+      description: No content
     400:
       $ref: '#/components/responses/invalidParameter'
     404:
@@ -50,6 +52,8 @@ patch:
             data:
               $ref: '#/components/schemas/DailyQuestionEdit'
   responses:
+    204:
+      description: No content
     200:
       description: Success
       content:
