update docs add requests fo dq admin 3

--- a/docs/spec/components/schemas/DailyQuestionEditKey.yaml
+++ b/docs/spec/components/schemas/DailyQuestionEditKey.yaml
@@ -8,4 +8,4 @@ properties:
     description: Question id
   type:
     type: string
-    enum: [ daily_question_edit ]
+    enum: [ daily_questions ]
