--- a/docs/spec/components/schemas/RarimarketAccountKey.yaml
+++ b/docs/spec/components/schemas/RarimarketAccountKey.yaml
@@ -5,9 +5,9 @@ required:
 properties:
   id:
     type: string
-    description: Nullifier of the points owner
+    description: Rarimarket account address
     example: "0x123...abc"
-    pattern: '^0x[0-9a-fA-F]{64}$'
+    pattern: '^0x[0-9a-fA-F]{40}$'
   type:
     type: string
     enum: [ rarimarket_account ]
