--- a/docs/spec/paths/integrations@geo-points-svc@v2@public@qrcodes@{qr_code}.yaml
+++ b/docs/spec/paths/integrations@geo-points-svc@v2@public@qrcodes@{qr_code}.yaml
@@ -1,9 +1,9 @@
 post:
   tags:
     - QRCodes
-  summary: Create QR code
-  description: Create custom qr code
-  operationId: createQRCode
+  summary: Send QR code
+  description: Send a QR code and get a reward
+  operationId: submitQRCode
   security:
     - BearerAuth: []
   requestBody:
@@ -16,7 +16,7 @@ post:
             - data
           properties:
             data:
-              $ref: '#/components/schemas/QRCode'
+              $ref: '#/components/schemas/QRCodeKey'
   responses:
     200:
       description: Success
@@ -28,10 +28,24 @@ post:
               - data
             properties:
               data:
-                $ref: '#/components/schemas/QRCode'
+                $ref: '#/components/schemas/EventClaimingState'
     400:
       $ref: '#/components/responses/invalidParameter'
     401:
       $ref: '#/components/responses/invalidAuth'
+    403:
+      description: May be user haven't verified passport
+      content:
+        application/vnd.api+json:
+          schema:
+            $ref: '#/components/schemas/Errors'
+    404:
+      $ref: '#/components/responses/notFound'
+    409:
+      description: QR code already submited
+      content:
+        application/vnd.api+json:
+          schema:
+            $ref: '#/components/schemas/Errors'
     500:
       $ref: '#/components/responses/internalError'
